chore(gitignore): update

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,6 @@
 /module/.build
 /module/Packages
 /module/Package.resolved
-/*.xcodeproj
-xcuserdata/
-DerivedData/
-.swiftpm/config/registries.json
-.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+/module/*.xcodeproj
+/module/.swiftpm/
 .netrc
